# dessiner-un-son

./: CMakeLists.txt  README.md
sources/: dot-editor-widget.cc  dot-editor-widget.h  main.cc  main.h  math-dsp.cc  math-dsp.h  new-wave-editor.cc  new-wave-editor.h  new-wave-editor.ui  new-wave-view.cc  new-wave-view.h  wave-generator.cc  wave-generator.h  wave-io-dialog.cc  wave-io-dialog.h  wave-io.cc  wave-io.h
